src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__detail__detail_view_basic.snap
---
source: src/tui/snapshot_tests/detail.rs
expression: terminal.backend()
---
"┌ Session Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ #42  Add login flow                                                                                                  │"
"│ RUNNING   Phase: UNKNOWN  $0.12  0 tools  2m30s  Retries: 0                                                          │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Activity Log ────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Files (0) ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│No files touched yet                                                                                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
