src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__detail__detail_view_with_activity_log.snap
---
source: src/tui/snapshot_tests/detail.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════[ Session Detail ]══════════════════════════════════════════════════╗"
"║ #42  Add login flow                                                                                                  ║"
"║ RUNNING   Phase: UNKNOWN  $0.12  0 tools  2m30s  Retries: 0  Agent: claude                                           ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════════════[ Activity Log ]═══════════════════════════════════════════════════╗"
"║10:00:30 Running cargo test                                                                                           ║"
"║10:00:15 Writing tests                                                                                                ║"
"║10:00:05 Reading src/main.rs                                                                                          ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔════════════════════════════════════════════════════[ Files (0) ]═════════════════════════════════════════════════════╗"
"║No files touched yet                                                                                                  ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
