src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__detail__detail_view_with_files_and_retries.snap
---
source: src/tui/snapshot_tests/detail.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════[ Session Detail ]══════════════════════════════════════════════════╗"
"║ #42  Add login flow                                                                                                  ║"
"║ ERRORED   Phase: UNKNOWN  $0.12  0 tools  2m30s  Retries: 3  Agent: claude                                           ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════════════[ Activity Log ]═══════════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔════════════════════════════════════════════════════[ Files (3) ]═════════════════════════════════════════════════════╗"
"║src/main.rs, src/lib.rs, tests/test.rs                                                                                ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
