src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__detail__detail_view_with_progress.snap
---
source: src/tui/snapshot_tests/detail.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════[ Session Detail ]══════════════════════════════════════════════════╗"
"║ #42  Add login flow                                                                                                  ║"
"║ RUNNING   Phase: IMPLEMENTING  $0.12  2 tools  2m30s  Retries: 0  Agent: claude                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════════════[ Activity Log ]═══════════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔════════════════════════════════════════════════════[ Files (0) ]═════════════════════════════════════════════════════╗"
"║No files touched yet                                                                                                  ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
